--- a/BookAppointment.html
+++ b/BookAppointment.html
@@ -10,7 +10,7 @@
  </head>
  <body>
  <section id="book-an-appointment">
- <form method="GET" enctype="multipart/form-data">
+ <form method="POST" enctype="multipart/form-data">
  <input type="hidden" name="hfcname" value="Proactive Clinic">
  
  <table width="100%" bgcolor="#f2f2f2">
